fix loading overlay after fiting size on small devices

--- a/src/ChangeBlog.Management.Api/ClientApp/src/app/components/loading-spinner/loading-spinner.component.scss
+++ b/src/ChangeBlog.Management.Api/ClientApp/src/app/components/loading-spinner/loading-spinner.component.scss
@@ -1,8 +1,16 @@
+@import 'primeflex/src/_variables.scss';
+
 .loading-overlay {
   position: absolute;
-  width: calc(100% - 40px);
+  width: calc(100% - 26px);
   min-height: 83%;
   margin: 0;
   z-index: 2;
   background-color: var(--surface-ground);
+}
+
+@media (max-width: $md) {
+  .loading-overlay {
+    width: calc(100% - 10px);
+  }
 }
